# vocode-testing

apps/telephony_app/: Dockerfile  docker-compose.yml  main.py  outbound_call.py  pyproject.toml
quickstarts/: streaming_conversation.py
vocode/streaming/: audio_utils.py  streaming_conversation.py  vad_utils.py
vocode/streaming/agent/: __init__.py  chat_ollama_agent.py  factory.py  groq_agent.py  langchain_agent.py
vocode/streaming/models/: agent.py  synthesizer.py  telephony.py
vocode/streaming/output_device/: twilio_output_device.py
vocode/streaming/synthesizer/: __init__.py  deepgram_synthesizer.py  eleven_labs_synthesizer.py
vocode/streaming/telephony/client/: base_telephony_client.py  telnyx_client.py
vocode/streaming/transcriber/: deepgram_transcriber.py
