[tool.poetry]
name = "telephony-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
redis = "^4.5.4"
twilio = "^8.1.0"
vonage = "^3.5.1"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pydantic = "1.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
